# remembrall

./: CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
configs/: adreno.yaml  default.yaml
docs/: design.md  evaluation.md  limitations.md  memory_runtime.md
scripts/: run_demo.py
src/remembrall/: __init__.py  base_update.py  core.py  retrainer.py  sampler.py  scheduler.py
src/remembrall/models/: registry.py  stubs.py
src/remembrall/utils/: embeddings.py  logging.py  metrics.py
